--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     container:
       image: ubuntu:latest
     strategy:
