fix: try to use specific ubuntu container

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22
     strategy:
       matrix:
         python-version: ["3.9"]
