--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,24 +3,16 @@ name: Pylint
 on: [push]
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
-    strategy:
-      matrix:
-        python-version: ["3.9"]
     steps:
     - name: Install git
-      run: apt update && apt install git -y
+      run: apt update && apt install git python3 python3-pip -y
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pylint
     - name: Analysing the code with pylint
