--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -6,7 +6,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:22.04
+      image: ubuntu:latest
     steps:
     - name: Install git
       run: apt update && apt install git python3 python3-pip -y
